Added script.js and linked it in index.html

--- a/index.html
+++ b/index.html
@@ -1468,6 +1468,7 @@
             setTimeout(initializeQuotes, 100);
         });
     </script>
+<script src="script.js"></script>
 </body>
 </html><!DOCTYPE html>
 <html lang="en">
