--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@
 </head>
 <body>
     <audio id="bgMusic" loop style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
-        <source src="attached_assets/veazy x dpbeats.mp3" type="audio/mpeg">
+        <source src="https://od.lk/s/MzhfMjg2MDQ2MDJf/veazy%20x%20dpbeats.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <button id="musicToggle" style="position: fixed; bottom: 20px; right: 20px; z-index: 1001; background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px); border: 1px solid var(--primary); color: var(--primary); padding: 10px; border-radius: 50%; cursor: pointer; transition: all 0.3s ease;">
