--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/ScrollTrigger.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&family=Space+Grotesk:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         #landing-page {
@@ -1074,10 +1074,7 @@
     </style>
 </head>
 <body>
-    <audio id="bgMusic" loop style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
-        <source src="https://od.lk/s/MzhfMjg2MDQ2MDJf/veazy%20x%20dpbeats.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <audio id="bgMusic" src="https://od.lk/s/MzhfMjg2MDQ2MDJf/veazy%20x%20dpbeats.mp3" preload="auto" loop style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></audio>
     <button id="musicToggle" style="position: fixed; bottom: 20px; right: 20px; z-index: 1001; background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px); border: 1px solid var(--primary); color: var(--primary); padding: 10px; border-radius: 50%; cursor: pointer; transition: all 0.3s ease;">
         <i class="fas fa-music"></i>
     </button>
@@ -1166,29 +1163,6 @@
                 <div class="interview-content">
                     <h3>Upcoming Interviews</h3>
                     <p>Coming soon...</p>
-                </div><h2>APPEAL</h2>
-                <div class="interview-content">
-                    <h3>CASE 0385837042</h3>
-                    <p>Dear X Support,</p>
-                    <br>
-                    <p>Thank you for taking the time to review my request to reinstate my account, @veazydoezit. I’m genuinely grateful for your consideration. Over the past three years, I’ve poured my heart into this platform, posting daily for the last four years with barely a pause. X isn’t just a casual space for me—it’s a home where I’ve built a community, honed my craft, and grown a brand I’m proud of. As an X creator and advocate, I’d love the opportunity to continue contributing to this vibrant platform.</p>
-                    <br>
-                    <p>I think my suspension might be due to a few mistakes on my part, which I sincerely regret and fully own up to. Here’s what I believe may have happened:</p>
-                    <div class="reasons-box">
-                        <h3>Possible Reasons for My Suspension</h3>
-                        <ul>
-                            <li><strong>Alternate Accounts:</strong> I used alt accounts to boost my replies, not realizing this broke X’s rules on artificial engagement. I’ve stopped entirely and now see why it’s prohibited.</li>
-                            <li><strong>Satirical Post:</strong> I shared a tweet with satirical imagery and commentary as social critique. If it offended anyone, I apologize—that wasn’t my goal. I’m happy to provide context if needed.</li>
-                            <li><strong>Super Bowl Livestream:</strong> In an effort to grow my audience, I streamed the Super Bowl, not fully understanding copyright rules apply even to free events. It got 18k views (300 concurrent), but I know that doesn’t justify it. It was a dumb move, and it won’t happen again.</li>
-                        </ul>
-                    </div>
-
-                    <p>This suspension has been a wake-up call. In my 11 years on X, I’ve only had one brief 24-hour suspension—possibly a mix-up—showing I’m not a repeat troublemaker. I’ve learned how vital it is to stick to the rules, take breaks when needed, and use this platform responsibly. I still believe I can add value to X, and I’d be so thankful for one more chance to prove it. The support from my online friends has kept me going, and while my situation might seem minor in the grand scheme, X means everything to me. I’m sorry for my missteps and promise to improve daily while respecting the guidelines.</p>
-                    <br>
-                    <p>I’ve recently submitted an appeal with these details but wanted to offer this extra context. Please let me know if there’s more I can provide. Thank you again for considering me—I’d be thrilled to rejoin the X community and keep making a positive impact.</p>
-                    <br>
-                    <p>Sincerely,</p>
-                    <p><br>@veazydoezit</p>
                 </div>
             </div>
 
@@ -1272,7 +1246,6 @@
             <button class="button" onclick="getNewQuote()" style="margin: 1rem auto; padding: 0.5rem 1rem; font-size: 0.9em;">New Quote</button>
         </div>
     </div>
-
 
 
     <script>
@@ -1719,7 +1692,7 @@
             quoteContainers.forEach(() => {
                 const randomQuote = quotes[Math.floor(Math.random() * quotes.length)];
                 const quoteContent = `
-                    <div class="quote-content```${randomQuote.text.split('').map(char => 
+                    <div class="quote-content">${randomQuote.text.split('').map(char => 
                         char === ' ' ? ' ' : `<span>${char}</span>`
                     ).join('')}</div>
                     <div class="quote-author">- ${randomQuote.author}</div>
