--- a/index.html
+++ b/index.html
@@ -1296,8 +1296,139 @@
             <div id="content-artists" class="content-details" style="display: flex; flex-direction: column; background: rgba(0, 0, 0, 0.8); padding: 2rem; border-radius: 15px; margin-top: 2rem; position: relative; z-index: 10;">
                 <h2>Featured Artists</h2>
                 <div class="artist-content">
-                    <h3>Drake</h3>
-                    <p>Artist profile coming soon...</p>
+                    <h3>Drake: Artist Profile</h3>
+                     <div class="glass-card drake-card">
+                        <img src="ap-drake2.jpeg" alt="Drake image">
+                    </div>
+                    <div class="container">
+                        <div class="glass-card">
+                            <h2>Key Points</h2>
+                            <p class="key-points">
+                                Research suggests Drake has released around 14 number-one albums on the Billboard 200, including recent hits like "For All the Dogs" (2023) and "Some Sexy Songs 4 U" (2025) with PartyNextDoor. It seems likely he has sold over 20 million album units and over 244 million digital single units, based on RIAA certifications. The evidence leans toward Drake having over 75 billion streams on Spotify, making him one of the most-streamed artists globally. He holds numerous chart records, such as the most top 10 hits on the Billboard Hot 100 (80) and the most consecutive weeks on the chart (431 weeks). An unexpected detail is his entrepreneurial ventures, including founding OVO Sound and launching fashion labels like OVO and Nocta with Nike, Inc.
+                            </p>
+                        </div>
+
+                        <h2>Comprehensive Analysis</h2>
+                        <p>Drake, born Aubrey Drake Graham on October 24, 1986, in Toronto, Ontario, Canada, is a Canadian rapper, singer, songwriter, and producer who has become one of the most influential figures in contemporary music. His career, spanning nearly two decades since his debut in 2006, is characterized by chart dominance, record-breaking streaming numbers, and a significant cultural impact.</p>
+
+                        <h3>Career Highlights</h3>
+                        <p>Drake's journey began with his role as Jimmy Brooks on "Degrassi: The Next Generation" (2001–2008). Transitioning to music, he released his debut mixtape, "Room for Improvement," in 2006, followed by "So Far Gone" in 2009, featuring "Best I Ever Had." His debut studio album, "Thank Me Later" (2010), debuted at number one on the Billboard 200. Albums like "Take Care" (2011), "Scorpion" (2018), and "For All the Dogs" (2023) continued this trend. In 2025, "Some Sexy Songs 4 U" with PartyNextDoor also topped the charts.</p>
+                        <p>Beyond music, Drake founded OVO Sound in 2012, became the Toronto Raptors' global ambassador in 2013, and launched OVO and Nocta with Nike, Inc., plus the whiskey brand Virginia Black.</p>
+
+                        <h3>Achievements and Awards</h3>
+                        <p>Drake has won 5 Grammy Awards from 51 nominations, 6 American Music Awards, and 29 Billboard Music Awards from 39 nods. Named Artist of the Decade by Billboard in 2021, he also received IFPI Global Recording Artist of the Year in 2016 and 2018.</p>
+
+                        <h3>World and Industry Records</h3>
+                        <ul>
+                            <li>Most number-one albums on Billboard 200: 13</li>
+                            <li>Most charted songs: 358</li>
+                            <li>Most top 10 hits: 80</li>
+                            <li>Most consecutive weeks on chart: 431</li>
+                            <li>13 Billboard Hot 100 number-one singles</li>
+                        </ul>
+
+                        <h3>Music Statistics</h3>
+                        <p><strong>Album Sales:</strong> Over 20 million units in the US, 170 million records worldwide. <strong>Single Sales:</strong> Over 244 million digital units. <strong>Streaming:</strong> Over 75 billion streams on Spotify.</p>
+
+                        <h3>Longevity and Records Sold</h3>
+                        <p>Drake’s consistent releases since 2006 and over 170 million records sold worldwide highlight his enduring success.</p>
+
+                        <h3>Summary</h3>
+                        <p>As of February 27, 2025, Drake’s 13 number-one albums, 75 billion Spotify streams, and cultural ventures like OVO Sound solidify his status as a global icon.</p>
+
+                        <div class="glass-card">
+                            <h2>Tables</h2>
+                            <h3>Drake's Peak Chart Positions for Selected Singles (2000s and 2010s)</h3>
+                            <table>
+                                <tr>
+                                    <th>Title</th>
+                                    <th>Year</th>
+                                    <th>Billboard Hot 100 (US)</th>
+                                    <th>Canadian Hot 100 (CAN)</th>
+                                    <th>UK Singles Chart (UK)</th>
+                                </tr>
+                                <tr>
+                                    <td>"Best I Ever Had"</td>
+                                    <td>2009</td>
+                                    <td>2</td>
+                                    <td>24</td>
+                                    <td>123</td>
+                                </tr>
+                                <tr>
+                                    <td>"Over"</td>
+                                    <td>2010</td>
+                                    <td>14</td>
+                                    <td>17</td>
+                                    <td>50</td>
+                                </tr>
+                                <tr>
+                                    <td>"Take Care" (feat. Rihanna)</td>
+                                    <td>2012</td>
+                                    <td>7</td>
+                                    <td>15</td>
+                                    <td>9</td>
+                                </tr>
+                                <tr>
+                                    <td>"Started from the Bottom"</td>
+                                    <td>2013</td>
+                                    <td>6</td>
+                                    <td>36</td>
+                                    <td>25</td>
+                                </tr>
+                                <tr>
+                                    <td>"Hotline Bling"</td>
+                                    <td>2015</td>
+                                    <td>2</td>
+                                    <td>3</td>
+                                    <td>3</td>
+                                </tr>
+                            </table>
+
+                            <h3>Drake's Album Certifications (RIAA, Selected)</h3>
+                            <table>
+                                <tr>
+                                    <th>Album</th>
+                                    <th>Certification</th>
+                                    <th>Units (Millions)</th>
+                                </tr>
+                                <tr>
+                                    <td>Take Care</td>
+                                    <td>4x Platinum</td>
+                                    <td>4</td>
+                                </tr>
+                                <tr>
+                                    <td>Views</td>
+                                    <td>4x Platinum</td>
+                                    <td>4</td>
+                                </tr>
+                                <tr>
+                                    <td>Scorpion</td>
+                                    <td>3x Platinum</td>
+                                    <td>3</td>
+                                </tr>
+                                <tr>
+                                    <td>Certified Lover Boy</td>
+                                    <td>2x Platinum</td>
+                                    <td>2</td>
+                                </tr>
+                                <tr>
+                                    <td>Her Loss (with 21 Savage)</td>
+                                    <td>2x Platinum</td>
+                                    <td>2</td>
+                                </tr>
+                            </table>
+                        </div>
+
+                        <h2>Citations</h2>
+                        <p>
+                            <a href="https://en.wikipedia.org/wiki/Drake_albums_discography">Drake albums discography Wikipedia</a> |
+                            <a href="https://en.wikipedia.org/wiki/Drake_(musician)">Drake musician Wikipedia</a> |
+                            <a href="https://www.billboard.com/artist/drake/">Drake Billboard artist page</a> |
+                            <a href="https://www.riaa.com/gold-platinum/">RIAA Gold and Platinum certifications</a> |
+                            <a href="https://open.spotify.com/artist/3TVXtAsR1Inumwj472S9r4">Drake Spotify artist page</a> |
+                            <a href="https://chartmasters.org/drake-albums-and-songs-sales/">ChartMasters Drake sales</a>
+                        </p>
+                    </div>
                 </div>
             </div>
 
