added drake glass card to index.html

--- a/index.html
+++ b/index.html
@@ -1293,21 +1293,43 @@
                 </div>
             </div>
 
-            <div id="content-artists" class="content-details" style="display: flex; flex-direction: column; background: rgba(0, 0, 0, 0.8); padding: 2rem; border-radius: 15px; margin-top: 2rem; position: relative; z-index: 10;">
-                <h2>Featured Artists</h2>
-                <div class="artist-content">
-                    <h3>Drake: Artist Profile</h3>
-                     <div class="glass-card drake-card">
-                        <img src="ap-drake2.jpeg" alt="Drake image">
-                    </div>
-                    <div class="container">
-                        <div class="glass-card">
-                            <h2>Key Points</h2>
-                            <p class="key-points">
-                                Research suggests Drake has released around 14 number-one albums on the Billboard 200, including recent hits like "For All the Dogs" (2023) and "Some Sexy Songs 4 U" (2025) with PartyNextDoor. It seems likely he has sold over 20 million album units and over 244 million digital single units, based on RIAA certifications. The evidence leans toward Drake having over 75 billion streams on Spotify, making him one of the most-streamed artists globally. He holds numerous chart records, such as the most top 10 hits on the Billboard Hot 100 (80) and the most consecutive weeks on the chart (431 weeks). An unexpected detail is his entrepreneurial ventures, including founding OVO Sound and launching fashion labels like OVO and Nocta with Nike, Inc.
-                            </p>
+<div id="content-artists" class="content-details" style="display: flex; flex-direction: column; background: rgba(0, 0, 0, 0.8); padding: 2rem; border-radius: 15px; margin-top: 2rem; position: relative; z-index: 10;">
+                <h2>Featured Artists
+                    <div class="glass-card drake-card">
+                      <img src="ap-drake2.jpeg" alt="Drake's artist profile picture">
+                      <h2>Drake</h2>
+                      <p>Aubrey Drake Graham, known professionally as Drake, is a Canadian rapper, singer, songwriter, and actor. </p>
+                        <h3>Key Points</h3>
+                      <div class="content-details" id="content-drake">
+                        <div class="artist-details">
+                          <p>Drake is widely regarded as one of the most influential artists of the 2010s and 2020s, with his music often blending hip hop, R&B, and pop elements.</p>
+                            <br>
+                          <p>He has won numerous awards, including four Grammy Awards, 27 Billboard Music Awards, and 17 American Music Awards.</p>
+                            <br>
+                          <p>Drake's impact on music and popular culture is undeniable, and he continues to be one of the most popular artists in the world.</p>
+                            <br>
                         </div>
-
+                        <div class="artist-details">
+                          <p>His music is known for its lyrical depth, emotional honesty, and unique production.</p>
+                            <br>
+                          <p>He has collaborated with many other artists, including Rihanna, Kanye West, and Nicki Minaj.</p>
+                            <br>
+                        </div>
+                        <div class="world-industry-records">
+                            <h3>World and Industry Records</h3>
+                            <ul>
+                                <li>Most #1 albums on Billboard 200: 13</li>
+                                <li>Most charted songs: 358</li>
+                                <li>Most top 10 hits: 80</li>
+                                <li>Most consecutive weeks on chart: 431</li>
+                                <li>13 Billboard Hot 100 number-one singles</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                </h2>
+                <div class="artist-content"></div>
+                    <div class="container"></div>
                         <h2>Comprehensive Analysis</h2>
                         <p>Drake, born Aubrey Drake Graham on October 24, 1986, in Toronto, Ontario, Canada, is a Canadian rapper, singer, songwriter, and producer who has become one of the most influential figures in contemporary music. His career, spanning nearly two decades since his debut in 2006, is characterized by chart dominance, record-breaking streaming numbers, and a significant cultural impact.</p>
 
@@ -1317,15 +1339,6 @@
 
                         <h3>Achievements and Awards</h3>
                         <p>Drake has won 5 Grammy Awards from 51 nominations, 6 American Music Awards, and 29 Billboard Music Awards from 39 nods. Named Artist of the Decade by Billboard in 2021, he also received IFPI Global Recording Artist of the Year in 2016 and 2018.</p>
-
-                        <h3>World and Industry Records</h3>
-                        <ul>
-                            <li>Most number-one albums on Billboard 200: 13</li>
-                            <li>Most charted songs: 358</li>
-                            <li>Most top 10 hits: 80</li>
-                            <li>Most consecutive weeks on chart: 431</li>
-                            <li>13 Billboard Hot 100 number-one singles</li>
-                        </ul>
 
                         <h3>Music Statistics</h3>
                         <p><strong>Album Sales:</strong> Over 20 million units in the US, 170 million records worldwide. <strong>Single Sales:</strong> Over 244 million digital units. <strong>Streaming:</strong> Over 75 billion streams on Spotify.</p>
@@ -1337,7 +1350,7 @@
                         <p>As of February 27, 2025, Drake’s 13 number-one albums, 75 billion Spotify streams, and cultural ventures like OVO Sound solidify his status as a global icon.</p>
 
                         <div class="glass-card">
-                            <h2>Tables</h2>
+                            <h2>By the Numbers</h2>
                             <h3>Drake's Peak Chart Positions for Selected Singles (2000s and 2010s)</h3>
                             <table>
                                 <tr>
@@ -1419,6 +1432,18 @@
                             </table>
                         </div>
 
+                        <h2>Citations</h2>
+                        <p>
+                            <a href="https://en.wikipedia.org/wiki/Drake_albums_discography">Drake albums discography Wikipedia</a> |
+                            <a href="https://en.wikipedia.org/wiki/Drake_(musician)">Drake musician Wikipedia</a> |
+                            <a href="https://www.billboard.com/artist/drake/">Drake Billboard artist page</a> |
+                            <a href="https://www.riaa.com/gold-platinum/">RIAA Gold and Platinum certifications</a> |
+                            <a href="https://open.spotify.com/artist/3TVXtAsR1Inumwj472S9r4">Drake Spotify artist page</a> |
+                            <a href="https://chartmasters.org/drake-albums-and-songs-sales/">ChartMasters Drake sales</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
                         <h2>Citations</h2>
                         <p>
                             <a href="https://en.wikipedia.org/wiki/Drake_albums_discography">Drake albums discography Wikipedia</a> |
