added quotes added glass card for drake edited his artist profile in index.html

--- a/index.html
+++ b/index.html
@@ -1444,20 +1444,7 @@
                     </div>
                 </div>
             </div>
-                        <h2>Citations</h2>
-                        <p>
-                            <a href="https://en.wikipedia.org/wiki/Drake_albums_discography">Drake albums discography Wikipedia</a> |
-                            <a href="https://en.wikipedia.org/wiki/Drake_(musician)">Drake musician Wikipedia</a> |
-                            <a href="https://www.billboard.com/artist/drake/">Drake Billboard artist page</a> |
-                            <a href="https://www.riaa.com/gold-platinum/">RIAA Gold and Platinum certifications</a> |
-                            <a href="https://open.spotify.com/artist/3TVXtAsR1Inumwj472S9r4">Drake Spotify artist page</a> |
-                            <a href="https://chartmasters.org/drake-albums-and-songs-sales/">ChartMasters Drake sales</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div id="content-trending" class="content-details" style="display: flex; flex-direction: column; background: rgba(0, 0, 0, 0.8); padding: 2rem; border-radius: 15px; margin-top: 2rem; position: relative; z-index: 10;">
+ <div id="content-trending" class="content-details" style="display: flex; flex-direction: column; background: rgba(0, 0, 0, 0.8); padding: 2rem; border-radius: 15px; margin-top: 2rem; position: relative; z-index: 10;">
                 <h2>Trending</h2>
                 <div class="trending-content">
                     <h3>Hip Hop Evolution</h3>
@@ -1912,6 +1899,24 @@
             { text: "Without music, life would be a mistake.", author: "Friedrich Nietzsche" },
             { text: "Music is the strongest form of magic.", author: "Marilyn Manson" },
             { text: "Music produces a kind of pleasure which human nature cannot do without.", author: "Confucius" }
+            { text: "When something is important enough, you do it even if the odds are not in your favor.", author: "Elon Musk" }
+            { text: "Persistence is very important. You should not give up unless you are forced to give up.", author: "Elon Musk" }
+            { text: "I rather be optimistic and wrong than pessimistic and right.", author: "Elon Musk" }
+            { text: "Sometimes life hits you in the head with a brick. Don't lose faith.", author: "Steve Jobs" }
+            { text: "Stay hungry, stay foolish.", author: "Steve Jobs" }
+            { text: "It does not matter how slowly you go as long as you do not stop.", author: "Confucius" }
+            { text: "Wherever you go, go with all your heart.", author: "Confucius" }
+            { text: "Real knowledge is to know th extent of one's ignorance.", author: "Confucius" }
+            { text: "The bamboo that bends is stronger than the oak that resists.", author: "Japanese Proverb" }
+            { text: "Failure is an option here. If things are not failing, you are not innovating enough.", author: "Elon Musk" }
+            { text: "I think it is possible for ordinary people to choose to be extraordinary.", author: "Elon Musk" }
+            { text: "Believe you can and you're halfway there.", author: "Theodore Roosevelt" }
+            { text: "It always seems impossible until it's done.", author: "Nelson Mandela" }
+            { text: "The future belongs to those who believe in the beauty of their dreams.", author: "Eleanor Roosevelt" }
+            { text: "You miss 100% of the shots you don't take.", author: "Wayne Gretzky" }
+            { text: "The only way to do great work is to love what you do.", author: "Steve Jobs" }
+            { text: "Success is not final, failure is not fatal: It is the courage to continue that counts.", author: "Winston Churchill" }
+
         ];
 
         function getNewQuote() {
