updated index script and styles, fixed the loading page and quote array

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+kk<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1444,7 +1444,7 @@
                     </div>
                 </div>
             </div>
- <div id="content-trending" class="content-details" style="display: flex; flex-direction: column; background: rgba(0, 0, 0, 0.8); padding: 2rem; border-radius: 15px; margin-top: 2rem; position: relative; z-index: 10;">
+ <div id="content-trending" class="content-details" style="display: flex; flex-direction: column; background: rgba(0, 0, 0, 0.8); padding: 2rem; border-radius: 15px; margin-top: 2rem; position: relative; z-index: 10; width: 100%;">
                 <h2>Trending</h2>
                 <div class="trending-content">
                     <h3>Hip Hop Evolution</h3>
@@ -1452,7 +1452,7 @@
                 </div>
             </div>
         </div>
-        <div class="quote-container" style="margin: 4rem auto; background: rgba(0, 0, 0, 0.3); max-width: 800px;">
+        <div class="quote-container" style="margin: 4rem auto; background: rgba(0, 0, 0, 0.3); width: 100%; max-width: 100%;">
             <p class="quote-text" style="font-family: 'Space Grotesk', sans-serif; font-size: 1.2em;"></p>
             <button class="button" onclick="getNewQuote()" style="margin: 1rem auto; padding: 0.5rem 1rem; font-size: 0.9em;">New Quote</button>
         </div>
@@ -1898,23 +1898,23 @@
             { text: "Where words fail, music speaks.", author: "Hans Christian Andersen" },
             { text: "Without music, life would be a mistake.", author: "Friedrich Nietzsche" },
             { text: "Music is the strongest form of magic.", author: "Marilyn Manson" },
-            { text: "Music produces a kind of pleasure which human nature cannot do without.", author: "Confucius" }
-            { text: "When something is important enough, you do it even if the odds are not in your favor.", author: "Elon Musk" }
-            { text: "Persistence is very important. You should not give up unless you are forced to give up.", author: "Elon Musk" }
-            { text: "I rather be optimistic and wrong than pessimistic and right.", author: "Elon Musk" }
-            { text: "Sometimes life hits you in the head with a brick. Don't lose faith.", author: "Steve Jobs" }
-            { text: "Stay hungry, stay foolish.", author: "Steve Jobs" }
-            { text: "It does not matter how slowly you go as long as you do not stop.", author: "Confucius" }
-            { text: "Wherever you go, go with all your heart.", author: "Confucius" }
-            { text: "Real knowledge is to know th extent of one's ignorance.", author: "Confucius" }
-            { text: "The bamboo that bends is stronger than the oak that resists.", author: "Japanese Proverb" }
-            { text: "Failure is an option here. If things are not failing, you are not innovating enough.", author: "Elon Musk" }
-            { text: "I think it is possible for ordinary people to choose to be extraordinary.", author: "Elon Musk" }
-            { text: "Believe you can and you're halfway there.", author: "Theodore Roosevelt" }
-            { text: "It always seems impossible until it's done.", author: "Nelson Mandela" }
-            { text: "The future belongs to those who believe in the beauty of their dreams.", author: "Eleanor Roosevelt" }
-            { text: "You miss 100% of the shots you don't take.", author: "Wayne Gretzky" }
-            { text: "The only way to do great work is to love what you do.", author: "Steve Jobs" }
+            { text: "Music produces a kind of pleasure which human nature cannot do without.", author: "Confucius" },
+            { text: "When something is important enough, you do it even if the odds are not in your favor.", author: "Elon Musk" },
+            { text: "Persistence is very important. You should not give up unless you are forced to give up.", author: "Elon Musk" },
+            { text: "I rather be optimistic and wrong than pessimistic and right.", author: "Elon Musk" },
+            { text: "Sometimes life hits you in the head with a brick. Don't lose faith.", author: "Steve Jobs" },
+            { text: "Stay hungry, stay foolish.", author: "Steve Jobs" },
+            { text: "It does not matter how slowly you go as long as you do not stop.", author: "Confucius" },
+            { text: "Wherever you go, go with all your heart.", author: "Confucius" },
+            { text: "Real knowledge is to know the extent of one's ignorance.", author: "Confucius" },
+            { text: "The bamboo that bends is stronger than the oak that resists.", author: "Japanese Proverb" },
+            { text: "Failure is an option here. If things are not failing, you are not innovating enough.", author: "Elon Musk" },
+            { text: "I think it is possible for ordinary people to choose to be extraordinary.", author: "Elon Musk" },
+            { text: "Believe you can and you're halfway there.", author: "Theodore Roosevelt" },
+            { text: "It always seems impossible until it's done.", author: "Nelson Mandela" },
+            { text: "The future belongs to those who believe in the beauty of their dreams.", author: "Eleanor Roosevelt" },
+            { text: "You miss 100% of the shots you don't take.", author: "Wayne Gretzky" },
+            { text: "The only way to do great work is to love what you do.", author: "Steve Jobs" },
             { text: "Success is not final, failure is not fatal: It is the courage to continue that counts.", author: "Winston Churchill" }
 
         ];
