added hot takes and styling to index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -1239,11 +1239,15 @@ kk<!DOCTYPE html>
                 </div>
             </div>
 
-            <div id="content-opinions" class="content-details" style="display: flex; flex-direction: column; opacity: 1; background: rgba(0, 0, 0, 0.8); padding: 2rem; border-radius: 15px; margin-top: 2rem; position: relative; z-index: 10; transition: opacity 0.3s ease-in-out;">
+<div id="content-opinions" class="content-details" style="display: flex; flex-direction: column; opacity: 1; background: rgba(0, 0, 0, 0.8); padding: 2rem; border-radius: 15px; margin-top: 2rem; position: relative; z-index: 10; transition: opacity 0.3s ease-in-out;">
                 <h2>Opinions</h2>
-                <div class="opinions-content">
+                <div class="glass-card" style="background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px); border-radius: 20px; padding: 2rem; border: 1px solid rgba(255, 255, 255, 0.2); cursor: pointer;">
                     <h3>Hot Takes</h3>
-                    <p>Coming soon...</p>
+                    <p>Streaming platforms like Spotify have turned music into background noise, not art—over 100 million songs uploaded by 2025, and most get less than 100 plays.</p>
+                    <p>Drake’s dominance is overrated; his 75 billion streams are inflated by playlist algorithms, not raw talent—Kendrick’s catalog outclasses him pound-for-pound.</p>
+                    <p>Taylor Swift’s re-recordings are a genius cash grab, but they’ve diluted her legacy—fans are buying the same songs twice while she’s laughing to the bank with $1 billion+.</p>
+                    <p>Hip-hop’s golden age ended in the 2010s; trap’s repetition and mumble rap killed lyrical innovation—only 5% of Top 100 tracks in 2024 had bars worth quoting.</p>
+                    <p>Auto-tune isn’t a crutch, it’s a revolution—Kanye and T-Pain proved it’s an instrument, and purists crying about “real singing” are stuck in the 90s.</p>
                 </div>
             </div>
 
