moved trending container under news container and updated js

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-kk<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1239,6 +1239,14 @@ kk<!DOCTYPE html>
                 </div>
             </div>
 
+            <div id="content-trending" class="content-details" style="display: flex; flex-direction: column; background: rgba(0, 0, 0, 0.8); padding: 2rem; border-radius: 15px; margin-top: 2rem; position: relative; z-index: 10; width: 100%;">
+                <h2>Trending</h2>
+                <div class="trending-content">
+                    <h3>Hip Hop Evolution</h3>
+                    <p>Trend analysis coming soon...</p>
+                </div>
+            </div>
+
 <div id="content-opinions" class="content-details" style="display: flex; flex-direction: column; opacity: 1; background: rgba(0, 0, 0, 0.8); padding: 2rem; border-radius: 15px; margin-top: 2rem; position: relative; z-index: 10; transition: opacity 0.3s ease-in-out;">
                 <h2>Opinions</h2>
                 <div class="glass-card" style="background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px); border-radius: 20px; padding: 2rem; border: 1px solid rgba(255, 255, 255, 0.2); cursor: pointer;">
@@ -1448,14 +1456,7 @@ kk<!DOCTYPE html>
                     </div>
                 </div>
             </div>
- <div id="content-trending" class="content-details" style="display: flex; flex-direction: column; background: rgba(0, 0, 0, 0.8); padding: 2rem; border-radius: 15px; margin-top: 2rem; position: relative; z-index: 10; width: 100%;">
-                <h2>Trending</h2>
-                <div class="trending-content">
-                    <h3>Hip Hop Evolution</h3>
-                    <p>Trend analysis coming soon...</p>
-                </div>
-            </div>
-        </div>
+ </div>
         <div class="quote-container" style="margin: 4rem auto; background: rgba(0, 0, 0, 0.3); width: 100%; max-width: 100%;">
             <p class="quote-text" style="font-family: 'Space Grotesk', sans-serif; font-size: 1.2em;"></p>
             <button class="button" onclick="getNewQuote()" style="margin: 1rem auto; padding: 0.5rem 1rem; font-size: 0.9em;">New Quote</button>
